# rust-axum-mongo-demo

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  model.rs
src/persistence/: ticket.rs
src/web/: routes_login.rs  routes_tickets.rs
tests/: routes_tickets_tests.rs
