[package]
name = "demo-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.16"
futures = "0.3.28"
hyper = "0.14.26"
mongodb = "2.4.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = "0.14.26"

[[bin]]
name = "demo_web_app"
path = "src/main.rs"

[lib]
name = "demo_web_app_lib"
path = "src/lib.rs"
